# deltawoot

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  entrypoint.sh  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
src/deltawoot/: quickndirty.py  recv.py  send.py  woot.py
tests/: conftest.py  test_online.py  test_recv.py  test_send.py  test_woot.py
