[metadata]
name = deltawoot
version = 1.1.0
author = missytake
author_email = missytake@systemli.org
description = A deltachat client for chatwoot, so users can talk to chatwoot encrypted.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deltachat-bot/deltawoot
project_urls =
    Bug Tracker = https://github.com/deltachat-bot/deltawoot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent

[options.entry_points]
console_scripts =
    deltawoot = deltawoot.recv:main

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    deltachat-rpc-client
    deltachat-rpc-server
    ConfigArgParse
    requests
    flask

[options.extras_require]
dev =
    pytest
    pytest-timeout

[options.packages.find]
where = src

[tox:tox]
envlist = lint, py310
isolated_build = True

[testenv:lint]
skip_install = True
deps =
    black
commands =
    black --check --diff --line-length 120 src

[flake8]
max_line_length = 88
