[metadata]
name = deltawoot
version = 1.3.1
author = missytake
author_email = missytake@systemli.org
description = A deltachat client for chatwoot, so users can talk to chatwoot encrypted.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deltachat-bot/deltawoot
project_urls =
    Bug Tracker = https://github.com/deltachat-bot/deltawoot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent

[options.entry_points]
console_scripts =
    deltawoot = deltawoot.recv:main

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    deltachat-rpc-client==2.43.0
    deltachat-rpc-server==2.43.0
    ConfigArgParse
    requests
    flask
    sentry-sdk[flask]

[options.extras_require]
dev =
    pytest
    pytest-timeout
    pytest-env
    execnet
    black
    tox

[options.packages.find]
where = src

[tox:tox]
envlist = lint, py312
isolated_build = True

[testenv:lint]
skip_install = True
deps =
    black
commands =
    black --check --diff --line-length 120 src

[testenv]
deps =
    pytest
    pytest-env
    pytest-xdist
    pytest-timeout
    pdbpp
commands = pytest -v -rsXx {posargs}
passenv =
    DELTAWOOT_INVITE
    DELTAWOOT_ADDR
    WOOT_PROFILE_ACCESS_TOKEN
    WOOT_URL

[flake8]
max_line_length = 120
